Fix a new z-index issue in slide...

--- a/www/slide/app-slide.less
+++ b/www/slide/app-slide.less
@@ -107,7 +107,6 @@
         .cp-app-slide-viewer {
             width: 50vw;
             overflow: hidden;
-            z-index: 998;
             div#cp-app-slide-modal:not(.cp-app-slide-shown) {
                 position: relative;
                 top: auto;
